# wordcount

./: CHANGELOG.md  FPROG_Wordcount_PowerPoint.pptx  LICENSE  README.md  run.sh  wordcount.cabal
app/: Main.hs
app/output/: output.txt
app/src/: FileReader.hs  RBTree.hs  Tokenizer.hs  Util.hs  Writer.hs
app/test/: FileReaderSpec.hs  RBTreeSpec.hs  Spec.hs  TokenizerSpec.hs  UtilSpec.hs  WriterSpec.hs
