cabal-version:      3.0

name:               wordcount
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Helena
maintainer:         est@live.at
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable wordcount
    import:           warnings
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:
        Writer,
        FileReader,
        RBTree,
        Tokenizer,
        Util
    ghc-options: -O2 -threaded -rtsopts
    build-depends:    
        base ^>=4.17.2.1,
        filepath ^>=1.4.2.2,
        directory ^>=1.3.7.1,
        containers ^>=0.6.7,
        parallel ^>=3.2.2.0
    hs-source-dirs:   app, app/src
    default-language: Haskell2010

test-suite wordcount-tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   app/test, app/src
    build-depends:    
        base ^>=4.17.2.1,
        filepath ^>=1.4.2.2,
        directory ^>=1.3.7.1,
        containers ^>=0.6.7,
        parallel ^>=3.2.2.0,
        hspec >=2.11 && <3,
        hspec-discover
    other-modules:  FileReader, RBTree, Tokenizer, Writer, Util,  
                    FileReaderSpec, RBTreeSpec, TokenizerSpec, WriterSpec, UtilSpec
    default-language: Haskell2010
